# CrappyCraft

./: .gitignore  CMakeLists.txt  CrappyCraft.sln  LICENSE  README.md
CrappyCraft/: CMakeLists.txt  CrappyCraft.cpp  CrappyCraft.h  CrappyCraft.vcxproj  CrappyCraft.vcxproj.filters
CrappyCraft/src/: CrappyCraft.cpp  CrappyCraft.h
CrappyCraftGraphics/: CMakeLists.txt  CrappyCraftGraphics.vcxproj  CrappyCraftGraphics.vcxproj.filters
CrappyCraftGraphics/src/: Display.cpp  Display.h  Shader.cpp  Shader.h
CrappyCraftGraphics/src/Controls/: Button.cpp  Button.h
CrappyCraftGraphics/src/GUI/: Button.h
CrappyCraftGraphics/src/GUI/Controls/: Button.cpp  Button.h  Control.cpp  Control.h
CrappyCraftGraphics/src/Vectors/: Mat4.h  Vec2.cpp  Vec2.h  Vec3.cpp  Vec3.h  Vec4.h
CrappyCraftLauncher/: CMakeLists.txt  CrappyCraftLauncher.vcxproj  CrappyCraftLauncher.vcxproj.filters  authserver.crt
CrappyCraftLauncher/src/: Authenticator.cpp  Authenticator.h  CrappyCraftLauncher.cpp  CrappyCraftLauncher.h  HTTPSClient.cpp  HTTPSClient.h  Log.h
Game/: CMakeLists.txt
Game/src/: CrappyCraft.cpp  CrappyCraft.h
Graphics/: CMakeLists.txt
Graphics/src/: Display.cpp  Display.h  Log.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Graphics/src/Controls/: Button.cpp  Button.h  Control.cpp  Control.h
Graphics/src/Textures/: Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h
Graphics/src/Vectors/: Mat4.h  Vec2.h  Vec3.h  Vec4.h
Launcher/: CMakeLists.txt  mojang.pem
Launcher/src/: Authenticator.h  CrappyCraftLauncher.cpp  CrappyCraftLauncher.h  HTTPSClient.cpp  HTTPSClient.h  Log.h
Networking/: CMakeLists.txt
Networking/src/Packets/: Packet.h  PacketType.h
cmake/Modules/: FindSOIL.cmake  LICENSE
